# ferrisflash

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: fs.rs  gui.rs  main.rs
