[package]
name = "ferrisflash"
version = "0.3.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.1"
zstd = "0.13"
egui = "0.33"
eframe = "0.33"
rfd = "0.15"
egui_extras = { version = "0.33", features = ["svg", "image"] }
resvg = "0.45"
usvg = "0.45"
